// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image only renders img element with webp disabled 1`] = `
<picture
  class="image"
>
  <!---->
   
  <img
    alt="Foo"
    class="lazyload"
    data-optimumx="auto"
    data-sizes="auto"
    data-src="/image.jpg"
    data-srcset="/image.jpg"
  />
</picture>
`;

exports[`Image renders optional props 1`] = `
<picture
  class="image"
>
  <source
    data-optimumx="auto"
    data-sizes="auto"
    data-srcset="/image.jpg?fl=progressive&f=faces&fm=webp&h=200&q=50&w=200 200w 200h, /image.jpg?fl=progressive&f=faces&fm=webp&h=300&q=50&w=400 400w 300h"
    type="image/webp"
  />
  <source
    data-optimumx="auto"
    data-sizes="auto"
    data-srcset="/image.jpg?fl=progressive&f=faces&fm=jpg&h=200&q=50&w=200 200w 200h, /image.jpg?fl=progressive&f=faces&fm=jpg&h=300&q=50&w=400 400w 300h"
    type="image/jpeg"
  />
   
  <img
    alt="Foo"
    class="lazyload"
    data-optimumx="auto"
    data-sizes="auto"
    data-src="/image.jpg?fl=progressive&f=faces&h=200&q=50"
    data-srcset="/image.jpg?fl=progressive&f=faces&h=200&q=50&w=200 200w 200h, /image.jpg?fl=progressive&f=faces&h=300&q=50&w=400 400w 300h"
  />
</picture>
`;

exports[`Image renders required props 1`] = `
<picture
  class="image"
>
  <source
    data-optimumx="auto"
    data-sizes="auto"
    data-srcset="/image.jpg?fm=webp"
    type="image/webp"
  />
  <source
    data-optimumx="auto"
    data-sizes="auto"
    data-srcset="/image.jpg?fm=jpg"
    type="image/jpeg"
  />
   
  <img
    alt="Foo"
    class="lazyload"
    data-optimumx="auto"
    data-sizes="auto"
    data-src="/image.jpg"
    data-srcset="/image.jpg"
  />
</picture>
`;
